# gdm-hackathon

./: .env.template  .gitignore  API_INTEGRATION.md  README.md  api.py  demo.py  generate_hipe_reports.py  genetic_algo_code_agent.py  gradio_chatbot.py  medgemma_query.py  plot_evaluation_results.py  pyproject.toml  run_agent_loop.sh  run_chatbot.py  run_dev.py  smolagent_coding_agent.py
front/: README.md  index.html  tailwind.config.ts
front/src/: index.css
front/src/components/: MedicalReportInterface.tsx
front/src/hooks/: useAnalysis.ts
front/src/pages/: Index.tsx
gdm_hackathon/: __init__.py  config.py  utils.py
gdm_hackathon/data/: manifest.yaml
gdm_hackathon/db/: README.md  README_DATABASE.md  __init__.py  db_api.py  db_client.py  local_db.py  start_db_api.py
gdm_hackathon/models/: medgemma_query.py  vertex_ai_model.py  vertex_models.py
gdm_hackathon/poc/: README.md  evaluation_tool.py  report_functions.py
gdm_hackathon/poc/precomputed_folder/: clinical.json  hipe_report.json  response_to_treatment.json  spt_report.json
gdm_hackathon/tools/: __init__.py  clinical_tool.py  evaluation_tool.py  medgemma_tool.py  pubmed_tool.py
gdm_hackathon/tools/bulk_rnaseq/: generate_pathway_reports.py  pathway_tool.py  process_data.py  test_tool.py
gdm_hackathon/tools/genomic_report/: generate_reports.py  genomic_tool.py  process_data.py  test_tool.py
gdm_hackathon/tools/heatmap_report/: README.md  generate_reports.py  heatmap_tool.py  test_tool.py
gdm_hackathon/tools/hipe_report/: README.md  hipe_tool.py  test_tool.py  vertex_model.py
